--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,6 +1,6 @@
 body 
 {
-
+    background: #1e1f24;
     color: #333;
     text-align: center; 
     font-family: Arial;
@@ -17,6 +17,11 @@ body
     margin: 0;
     padding: 0.5em;
 
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline
 {
@@ -39,5 +44,6 @@ body
 }
 #post
 {
+    background: white ;
     padding: 1em;
 }
