--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -41,3 +41,10 @@ body
 {
     padding: 1em;
 }
+#footer 
+{
+    background:palevioletred;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
