cambio al tagline y color del footer :)

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -49,7 +49,7 @@ body
 }
 #footer 
 {
-    background:palevioletred;
+    background:rgb(241, 151, 7);
     color: white;
     text-align: center;
     padding: 0.5em;
